# rayado

./: .gitignore  AGENTS.md  CACHE_SCHEMA.md  README.md  pyproject.toml
docs/references/: GCL.txt  Language Detection.txt  OPENAI Prompt caching.txt  OPENAI Streaming API responses.txt  Speaker Diarization.txt  nova2.txt  资料1.txt  资料2.txt
docs/spec/: CLI.md  GCL_TEMPLATE.md  REFactor_PLAN.md  SPEC.md
prompts/: SORAL.txt  SORAL_Merge.txt
scripts/: debug_deepgram.py  lid_vote.py  lid_voxlingua107.py  phase2_probe.py  run_e2e.py  vad_chunk_dump.py
src/rayado/: __main__.py  asr.py  cache.py  chunking.py  cli.py  entity.py  ffmpeg_tools.py  gcl.py  lid_voxlingua.py  models.py  overlap.py  phase1.py  phase2.py  phase3.py  pipeline.py  render.py  speaker.py  srt_utils.py  stats.py  utils.py  vad.py
tests/: test_lid_voxlingua.py  test_openai_live.py  test_phase1.py  test_phase2.py  test_phase3.py  test_srt_utils.py
