[project]
name = "rayado"
version = "0.1.0"
description = "High-throughput append-only CLI transcription pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "speechbrain>=1.0.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "huggingface_hub>=0.20.0",
]

[project.scripts]
rayado = "rayado.cli:main"

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"
